--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/forms": "~7.1.0",
     "@angular/http": "~7.1.0",
     "@angular/material": "^7.2.2",
-    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/platform-server": "~7.1.0",
     "@angular/router": "~7.1.0",
@@ -42,9 +42,9 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.2",
+    "@angular-devkit/build-angular": "^0.13.7",
     "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
+    "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
