--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.15.2",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
+    "ngx-json-ld": "^0.3.1",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
