--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "~7.1.0",
+    "@types/google.analytics": "0.0.40",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
