--- a/package.json
+++ b/package.json
@@ -15,55 +15,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.11",
-    "@angular/cdk": "^7.3.6",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/http": "~7.1.0",
-    "@angular/material": "^7.3.6",
-    "@angular/platform-browser": "^7.1.4",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/platform-server": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "@fortawesome/fontawesome-free": "^5.6.3",
-    "@ng-toolkit/universal": "^1.1.50",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@ng-toolkit/universal": "^1.1.51",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
-    "bootstrap": "^4.2.1",
-    "core-js": "^2.5.4",
-    "express": "^4.15.2",
-    "jquery": "^3.3.1",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.10",
+    "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ngx-json-ld": "^0.3.1",
-    "popper.js": "^1.14.6",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "^7.2.11",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.1.0",
     "@types/google.analytics": "0.0.40",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
-    "ts-loader": "^5.2.0",
+    "ts-loader": "^5.4.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.3.10"
   }
 }
