Completed html of customerLogin

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.10",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ngx-json-ld": "^0.3.1",
