--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "bootstrap": "^4.4.1",
-    "core-js": "^2.6.10",
+    "core-js": "^2.6.11",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "jquery-touchswipe": "^1.6.19",
     "moment": "^2.24.0",
     "ngx-json-ld": "^0.3.1",
     "popper.js": "^1.16.0",
