--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jquery": "^3.4.1",
     "jquery-touchswipe": "^1.6.19",
     "moment": "^2.24.0",
+    "ngx-bootstrap": "^5.2.0",
     "ngx-json-ld": "^0.3.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.3.3",
