--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
     "@angular/http": "~7.1.0",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/platform-server": "~7.1.0",
-    "@angular/router": "~7.1.0",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/platform-server": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@ng-toolkit/universal": "^1.1.51",
     "@nguniversal/express-engine": "^7.1.1",
@@ -39,17 +39,18 @@
     "jquery-touchswipe": "^1.6.19",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-daterangepicker-material": "^2.1.11",
     "ngx-json-ld": "^0.3.1",
     "popper.js": "^1.16.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "~7.1.0",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "~8.3.21",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/google.analytics": "0.0.40",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
@@ -66,7 +67,7 @@
     "ts-loader": "^5.4.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6",
+    "typescript": "~3.5.3",
     "webpack-cli": "^3.3.10"
   }
 }
