--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "ngx-daterangepicker-material": "^2.1.11",
     "ngx-json-ld": "^0.3.1",
     "popper.js": "^1.16.0",
-    "rxjs": "~6.5.3",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
