edited date selection for products

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@ng-toolkit/universal": "^1.1.51",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "angular-mydatepicker": "^0.3.4",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
     "express": "^4.17.1",
+    "fecha": "^3.0.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "jquery-touchswipe": "^1.6.19",
@@ -42,7 +44,7 @@
     "ngx-daterangepicker-material": "^2.1.11",
     "ngx-json-ld": "^0.3.1",
     "popper.js": "^1.16.0",
-    "rxjs": "~6.5.3",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
