--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/forms": "~8.2.14",
     "@angular/http": "~7.1.0",
     "@angular/material": "^7.3.7",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/platform-server": "~8.2.14",
