--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "ngx-bootstrap": "^5.3.2",
     "ngx-daterangepicker-material": "^2.1.11",
     "ngx-json-ld": "^0.3.1",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular/cli": "^8.3.23",
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular/cli": "^8.3.24",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/google.analytics": "0.0.40",
@@ -66,7 +66,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.3",
     "ts-loader": "^5.4.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
