Revise child prod

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ng-toolkit/universal": "^1.1.51",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "angular-calendar": "^0.28.2",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
     "express": "^4.17.1",
