--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@ng-toolkit/universal": "^1.1.51",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "angular-calendar": "^0.28.2",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
+    "date-fns": "^2.9.0",
     "express": "^4.17.1",
     "fecha": "^3.0.3",
     "hammerjs": "^2.0.8",
