--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --hmr",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -56,6 +56,7 @@
     "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@angularclass/hmr": "^2.1.3",
     "@types/google.analytics": "0.0.40",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
